--- a/jupyter_notebook/pdf-extractor.ipynb
+++ b/jupyter_notebook/pdf-extractor.ipynb
@@ -15,13 +15,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "db.getCollection('rpt_earnings_gen').find({\"status\" : \"wait\"}).count()\n",
-    "db.getCollection('rpt_earnings_gen').find({\"status\" : \"submitted\"}).count()"
+    "# db.getCollection('rpt_earnings_gen').find({\"status\" : \"wait\"}).count()\n",
+    "# db.getCollection('rpt_earnings_gen').find({\"status\" : \"submitted\"}).count()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# qa\n",
+    "MONGO=\"mongodb://app_dataifs_rw:uaTQIDzoq28o3gf4n@nosql06.wmcloud-dev.com:27017/dataifs\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -48,10 +58,561 @@
     "import pandas as pd\n",
     "from datetime import datetime\n",
     "mongo_conn = pymongo.MongoClient(MONGO, connect=False)\n",
-    "mongo_db = mongo_conn.get_database(\"dataifs\")\n",
+    "db = mongo_conn.get_database(\"dataifs\")\n",
     "\n",
     "print(pymongo.__version__)\n",
-    "collection='rpt_earnings_gen'"
+    "collection='rpt_earnings_gen'\n",
+    "\n",
+    "# db = mongo_db.connect()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "class ExtractStatus(object):\n",
+    "    # INIT= 'init' # 初始化，初始写入mongo\n",
+    "    WAIT = \"wait\"  # 提交任务\n",
+    "    SUBMITTED = \"submitted\"\n",
+    "    EXTRACTED = \"extracted\"\n",
+    "    FAILED = \"failed\"\n",
+    "    NO_KEYWORD = \"no_keyword\"\n",
+    "    MANUAL_EDITTING = \"manual_editting\"\n",
+    "    MANUAL_SAVED = \"manual_saved\"\n",
+    "    INCORRECT_CLASSIFICATION = \"incorrect_classification\"\n",
+    "    NO_INDIC = \"no_indic\"\n",
+    "    Statuses = [WAIT, SUBMITTED, EXTRACTED, FAILED, NO_KEYWORD, MANUAL_EDITTING, MANUAL_SAVED,\n",
+    "                INCORRECT_CLASSIFICATION, NO_INDIC]\n",
+    "    AllowedManualStatuses = [FAILED, NO_KEYWORD, MANUAL_EDITTING, MANUAL_SAVED, INCORRECT_CLASSIFICATION, NO_INDIC]\n",
+    "    QA_ERRS = \"qa_errs\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "testNo = 20200311"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 重置指定范围的任务"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "423\n",
+      "3685230\n",
+      "3684640\n",
+      "4176210\n",
+      "4176199\n",
+      "4176212\n",
+      "4176180\n",
+      "4176200\n",
+      "4176211\n",
+      "4176213\n",
+      "4176214\n",
+      "4176215\n",
+      "4176273\n",
+      "4176219\n",
+      "4176261\n",
+      "4176221\n",
+      "4176204\n",
+      "4176260\n",
+      "4176225\n",
+      "4176188\n",
+      "4176174\n",
+      "4176236\n",
+      "4176238\n",
+      "4176240\n",
+      "4176246\n",
+      "4176235\n",
+      "4176247\n",
+      "4176248\n",
+      "4176217\n",
+      "4176251\n",
+      "4176252\n",
+      "4176267\n",
+      "4176284\n",
+      "4176274\n",
+      "4176270\n",
+      "4176296\n",
+      "4176266\n",
+      "4176265\n",
+      "4176176\n",
+      "4176175\n",
+      "4176220\n",
+      "4176278\n",
+      "4176264\n",
+      "4176297\n",
+      "4176333\n",
+      "4176334\n",
+      "4176271\n",
+      "4176262\n",
+      "4176222\n",
+      "4176269\n",
+      "4176376\n",
+      "4176378\n",
+      "4176384\n",
+      "4176385\n",
+      "4176382\n",
+      "4176223\n",
+      "4176585\n",
+      "4176580\n",
+      "4176577\n",
+      "4176572\n",
+      "4176579\n",
+      "4176647\n",
+      "4176569\n",
+      "4176646\n",
+      "4176648\n",
+      "4176702\n",
+      "4176475\n",
+      "4176651\n",
+      "4176701\n",
+      "4176504\n",
+      "4176650\n",
+      "4176652\n",
+      "4176771\n",
+      "4176576\n",
+      "4176848\n",
+      "4176578\n",
+      "4176847\n",
+      "4176850\n",
+      "4176905\n",
+      "4176857\n",
+      "4176855\n",
+      "4176649\n",
+      "4176851\n",
+      "4176859\n",
+      "4177290\n",
+      "4177286\n",
+      "4177294\n",
+      "4177367\n",
+      "4177285\n",
+      "4177288\n",
+      "4177101\n",
+      "4177368\n",
+      "4177508\n",
+      "4177500\n",
+      "4177499\n",
+      "4177497\n",
+      "4177540\n",
+      "4176904\n",
+      "4177287\n",
+      "4177106\n",
+      "4177546\n",
+      "4177376\n",
+      "4177364\n",
+      "4177378\n",
+      "4177365\n",
+      "4177289\n",
+      "4177109\n",
+      "4177727\n",
+      "4177725\n",
+      "4177724\n",
+      "4177807\n",
+      "4177800\n",
+      "4177797\n",
+      "4177790\n",
+      "4177784\n",
+      "4177806\n",
+      "4177805\n",
+      "4177796\n",
+      "4177794\n",
+      "4177793\n",
+      "4177791\n",
+      "4177876\n",
+      "4177726\n",
+      "4177879\n",
+      "4177878\n",
+      "4177877\n",
+      "4177804\n",
+      "4177803\n",
+      "4177802\n",
+      "4177801\n",
+      "4177798\n",
+      "4177795\n",
+      "4177729\n",
+      "4177723\n",
+      "4177722\n",
+      "4177721\n",
+      "4177733\n",
+      "4177785\n",
+      "4177787\n",
+      "4177978\n",
+      "4177792\n",
+      "4177697\n",
+      "4177987\n",
+      "4177586\n",
+      "4177974\n",
+      "4177789\n",
+      "4177975\n",
+      "4177977\n",
+      "4177799\n",
+      "4177982\n",
+      "4178181\n",
+      "4178180\n",
+      "4178179\n",
+      "4178178\n",
+      "4178177\n",
+      "4178176\n",
+      "4178182\n",
+      "4178082\n",
+      "4178081\n",
+      "4178053\n",
+      "4178153\n",
+      "4178111\n",
+      "4178110\n",
+      "4178151\n",
+      "4178249\n",
+      "4178248\n",
+      "4178238\n",
+      "4178157\n",
+      "4177980\n",
+      "4178186\n",
+      "4178262\n",
+      "4178261\n",
+      "4178163\n",
+      "4178037\n",
+      "4177116\n",
+      "4177175\n",
+      "4178160\n",
+      "4177532\n",
+      "4178698\n",
+      "4178185\n",
+      "4178184\n",
+      "4178677\n",
+      "4178675\n",
+      "4178674\n",
+      "4178038\n",
+      "4178268\n",
+      "4178267\n",
+      "4178807\n",
+      "4178800\n",
+      "4178788\n",
+      "4178773\n",
+      "4178808\n",
+      "4178801\n",
+      "4178792\n",
+      "4178796\n",
+      "4178791\n",
+      "4178790\n",
+      "4178780\n",
+      "4178783\n",
+      "4178701\n",
+      "4178809\n",
+      "4178779\n",
+      "4178793\n",
+      "4178183\n",
+      "4178774\n",
+      "4178679\n",
+      "4178772\n",
+      "4178080\n",
+      "4178166\n",
+      "4178673\n",
+      "4178782\n",
+      "4178601\n",
+      "4178680\n",
+      "4178812\n",
+      "4178348\n",
+      "4178795\n",
+      "4178245\n",
+      "4178784\n",
+      "4177788\n",
+      "4178338\n",
+      "4178777\n",
+      "4177786\n",
+      "4178805\n",
+      "4177293\n",
+      "4177875\n",
+      "4178735\n",
+      "4177979\n",
+      "4178188\n",
+      "4178830\n",
+      "4178771\n",
+      "4178591\n",
+      "4178882\n",
+      "4178758\n",
+      "4178734\n",
+      "4178732\n",
+      "4178664\n",
+      "4178453\n",
+      "4179001\n",
+      "4178996\n",
+      "4178988\n",
+      "4178999\n",
+      "4179037\n",
+      "4179061\n",
+      "4179063\n",
+      "4179030\n",
+      "4179067\n",
+      "4178942\n",
+      "4179000\n",
+      "4178794\n",
+      "4179110\n",
+      "4179129\n",
+      "4179111\n",
+      "4179128\n",
+      "4179112\n",
+      "4179127\n",
+      "4179113\n",
+      "4179117\n",
+      "4179116\n",
+      "4178948\n",
+      "4179114\n",
+      "4178949\n",
+      "4178995\n",
+      "4178994\n",
+      "4178980\n",
+      "4179115\n",
+      "4179100\n",
+      "4179133\n",
+      "4179132\n",
+      "4178987\n",
+      "4179131\n",
+      "4178986\n",
+      "4179130\n",
+      "4178969\n",
+      "4179032\n",
+      "4179108\n",
+      "4178944\n",
+      "4178989\n",
+      "4179118\n",
+      "4179126\n",
+      "4179109\n",
+      "4176854\n",
+      "4177292\n",
+      "4178126\n",
+      "4178125\n",
+      "4176849\n",
+      "4179184\n",
+      "4177976\n",
+      "4178452\n",
+      "4177986\n",
+      "4178614\n",
+      "4177981\n",
+      "4178260\n",
+      "4178941\n",
+      "4179292\n",
+      "4179294\n",
+      "4179146\n",
+      "4179295\n",
+      "4179206\n",
+      "4179302\n",
+      "4179301\n",
+      "4179303\n",
+      "4178920\n",
+      "4178943\n",
+      "4179335\n",
+      "4179334\n",
+      "4179332\n",
+      "4179336\n",
+      "4179337\n",
+      "4179323\n",
+      "4179322\n",
+      "4179293\n",
+      "4178985\n",
+      "4179403\n",
+      "4179421\n",
+      "4179419\n",
+      "4178930\n",
+      "4179333\n",
+      "4179420\n",
+      "4179514\n",
+      "4179535\n",
+      "4179515\n",
+      "4179532\n",
+      "4179520\n",
+      "4179537\n",
+      "4179434\n",
+      "4179521\n",
+      "4179029\n",
+      "4179513\n",
+      "4179494\n",
+      "4179496\n",
+      "4179517\n",
+      "4178787\n",
+      "4179442\n",
+      "4179181\n",
+      "4178911\n",
+      "4178676\n",
+      "4179519\n",
+      "4179592\n",
+      "4179585\n",
+      "4179439\n",
+      "4179591\n",
+      "4179428\n",
+      "4179404\n",
+      "4179611\n",
+      "4179672\n",
+      "4179674\n",
+      "4179730\n",
+      "4179728\n",
+      "4179726\n",
+      "4179724\n",
+      "4179719\n",
+      "4179720\n",
+      "4179460\n",
+      "4179729\n",
+      "4179800\n",
+      "4179263\n",
+      "4179673\n",
+      "4179838\n",
+      "4178078\n",
+      "4179936\n",
+      "4179934\n",
+      "4179933\n",
+      "4179932\n",
+      "4179931\n",
+      "4179920\n",
+      "4179922\n",
+      "4179876\n",
+      "4179284\n",
+      "4179066\n",
+      "4178643\n",
+      "4179935\n",
+      "4178049\n",
+      "4176705\n",
+      "4179962\n",
+      "4179279\n",
+      "4179851\n",
+      "4180014\n",
+      "4180018\n",
+      "4180022\n",
+      "4180020\n",
+      "4180021\n",
+      "4180019\n",
+      "4180016\n",
+      "4180017\n",
+      "4180013\n",
+      "4180009\n",
+      "4180028\n",
+      "4180027\n",
+      "4180008\n",
+      "4180032\n",
+      "4180007\n",
+      "4180031\n",
+      "4180030\n",
+      "4180039\n",
+      "4180035\n",
+      "4180023\n",
+      "4180024\n",
+      "4180041\n",
+      "4180012\n",
+      "4180183\n",
+      "4180011\n",
+      "4180178\n",
+      "4180038\n",
+      "4180042\n",
+      "4180189\n",
+      "4180033\n",
+      "4180010\n",
+      "4180193\n",
+      "4179586\n",
+      "4179676\n",
+      "4180242\n",
+      "4180229\n",
+      "4180226\n",
+      "4180223\n",
+      "4180182\n",
+      "4180230\n",
+      "4180025\n",
+      "4180026\n",
+      "4180237\n",
+      "4180015\n",
+      "4180029\n",
+      "4180175\n",
+      "4180203\n",
+      "4180289\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'logger' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-12-026fa51dc3fc>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     16\u001b[0m                                    {\"$set\": {\"status\": ExtractStatus.WAIT, \"err_msg\": \"\", \"contents\": \"\"}})\n\u001b[0;32m     17\u001b[0m     \u001b[0mi\u001b[0m \u001b[1;33m+=\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 18\u001b[1;33m \u001b[0mlogger\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0minfo\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"testNo reset number %s\"\u001b[0m \u001b[1;33m%\u001b[0m \u001b[0mi\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     19\u001b[0m \u001b[1;31m#\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'logger' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "docs = db.rpt_earnings_gen.find({\"pubDate\": {\"$gt\": '2020-03-03'}})\n",
+    "# docs = db.rpt_earnings_gen.find(\n",
+    "#     {\"testNo\": testNo, \"status\": {\"$in\": [ExtractStatus.FAILED, ExtractStatus.NO_KEYWORD]}})\n",
+    "\n",
+    "# docs = db.rpt_earnings_gen.find({\"pubDate\": {\"$gt\": '2020-03-03'}, \"status\": ExtractStatus.EXTRACTED})\n",
+    "# docs = db.rpt_earnings_gen.find({\"testNo\": testNo})\n",
+    "# docs = db.rpt_earnings_gen.find({\"pubDate\": {\"$gt\": '2020-03-01'}})\n",
+    "# testNo = 0 标识before 抽取成功的记录\n",
+    "print(docs.count())\n",
+    "i = 0\n",
+    "for d in docs:\n",
+    "    id = d.get(\"db_id\")\n",
+    "    #\n",
+    "#     print(id)\n",
+    "    db.rpt_earnings_gen.update_one({\"db_id\": id},\n",
+    "                                   {\"$set\": {\"status\": ExtractStatus.WAIT, \"err_msg\": \"\", \"contents\": \"\"}})\n",
+    "    i += 1\n",
+    "print(\"testNo reset number %s\" % i)\n",
+    "#"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 按status分类统计， 查看mongo 中当前状态"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{u'count': 22, u'_id': u'failed'}\n",
+      "{u'count': 8, u'_id': u'no_keyword'}\n",
+      "{u'count': 393, u'_id': u'extracted'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "docs = db.rpt_earnings_gen.aggregate([\n",
+    "    {\n",
+    "        \"$match\": {\"pubDate\": {\"$gt\": '2020-03-03'}} # {\"testNo\": testNo}\n",
+    "        \n",
+    "    },\n",
+    "    {\n",
+    "        \"$group\": {\n",
+    "            \"_id\": \"$status\",\n",
+    "            \"count\": {\"$sum\": 1}\n",
+    "        }\n",
+    "    }\n",
+    "])\n",
+    "\n",
+    "for d in docs:\n",
+    "    print(d)"
    ]
   },
   {
@@ -60,7 +621,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mongo_db.get_collection(collection).find_one({\"db_id\":2498898})"
+    "# mongo_db.get_collection(collection).find_one({\"db_id\":2498898})"
    ]
   }
  ],
